# Platform-game

./: .gitignore  CMakeLists.txt
src/: EndDoor.cpp  EndDoor.h  EndScene.cpp  EndScene.h  Let.cpp  Let.h  Platform.cpp  Platform.h  Player.cpp  Player.h  Saveer.cpp  Saveer.h  Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h  World.cpp  World.h  boxBullet.cpp  boxBullet.h  bullet.cpp  bullet.h  button.cpp  button.h  chest.cpp  chest.h  coin.cpp  coin.h  levelSelection.cpp  levelSelection.h  main.cpp  mainMenu.cpp  mainMenu.h  shopMenu.cpp  shopMenu.h  spawnPoint.cpp  spawnPoint.h  turret.cpp  turret.h
